// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Lead /> renders children correctly 1`] = `
<p
  className="talixo-lead"
>
  We are very proud of how does it work.
</p>
`;

exports[`<Lead /> renders empty correctly 1`] = `
<p
  className="talixo-lead"
/>
`;
